log.txt
Postgres is up - executing command
Server.js is being executed!
Conexão com o banco de dados estabelecida com sucesso (Sequelize).
Server is running on port 5000
/usr/src/app/src/jobs/couponReminderJob.js:5
const { Op } = require('sequelize');

^
SyntaxError: Identifier 'Op' has already been declared
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:177:18)
    at Server.<anonymous> (/usr/src/app/src/server.js:75:31)
    at Object.onceWrapper (node:events:631:28)
Node.js v18.20.8